<package>
    <name>asr_ftc_local_planner</name>
    <version>1.0.0</version>
    <description>A local planner which based on the "follow the carrot" algorithm. Drives accurate along the global plan</description>
    <author>Marek Felix</author>
    <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
    <license>BSD</license>
    <url type="website">http://wiki.ros.org/asr_ftc_local_planner</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>costmap_2d</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    
    <export><nav_core plugin="${prefix}/blp_plugin.xml"/></export>

</package>


